config("compiler_flags") {
  libs = [ "ssl", "crypto" ]
  ldflags = [ "-L/opt/homebrew/opt/openssl@3/lib" ]
}

executable("websocket_client") {
  sources = [ "src/main.cpp" ]
  deps = [
    "//src/cli",
    "//src/websocket",
    "//src/util",
    "//third_party/boost:boost",
  ]
  libs = [
    "boost_system",
    "ssl",
    "crypto",
  ]
  ldflags = [
    "-L/opt/homebrew/opt/boost/lib",
    "-L/opt/homebrew/opt/openssl@3/lib",
  ]
}

group("all") {
  deps = [
    ":websocket_client",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//tests:websocket_client_tests",
  ]
}